--- a/WebAPP/register.html
+++ b/WebAPP/register.html
@@ -20,15 +20,14 @@
                 <input id = "passwordInput" type ="password" placeholder="Password" required>
                 <i class='bx bxs-lock'></i>
             </div>
-            <div class ="input-box">
-                <input id ="emailInput" type ="text" placeholder="Email" required>
-                <i class='bx bx-envelope' ></i>
-            </div>
             <div class = "usermessage">
                 <p id = "invalidinput"></p>
             </div>
             <div>
                 <button onclick="addUser()" type ="submit" class="btn">Register</button>
+            </div>
+            <div class="register-link">
+                <p>Return to <a href="index.html">Login</a></p>
             </div>
            
         </form>
