--- a/WebAPP/register.html
+++ b/WebAPP/register.html
@@ -33,6 +33,6 @@
         </form>
     </div>
 
-    <script src="JS_Code/registration.js"></script>
+    <script src="./JS_Code/registration.js"></script>
 </body>
 </html>
